src/styles/main.scss
@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
@import "./theme.scss";
@import "semantic-ui-css/semantic.min.css";
@import "./card.scss";
@import "./defaultWeather.scss";
@import "./mediaQueries.scss";

body {
  box-sizing: border-box;
  min-height: 100%;
  font-family: "Ubuntu", sans-serif;
  background-color: $WHITE;
  color: $BLACK !important;
}

.dashBoardWrapper {
  margin-bottom: 100px !important;
  .dashHeader {
    font-size: 15em;
    font-family: "Ubuntu", sans-serif;
    .dashTitle {
      background: rgb(91, 192, 235);
      background: linear-gradient(
        163deg,
        rgba(91, 192, 235, 1) 28%,
        rgba(255, 255, 255, 1) 100%
      );
      background-clip: text;
      -webkit-text-fill-color: transparent;
    }
    .sunDot {
      color: #fdeb5f;
    }
  }
}
.button {
  background: $BLUE !important;
  color: $WHITE !important;
}
.mainWeatherCard {
  min-height: 300px !important;
}

.mobileMisc {
  display: none !important;
  .accordTitle {
    color: rgb(59, 155, 196) !important;
    &:hover {
      opacity: 0.75;
    }
  }
}

.mobileMisc {
  display: block;
}

.socialIconsWrapper {
  position: fixed;
  bottom: 0;
  .socialIcons {
    font-size: 3rem;
    color: $DARK_BLUE;
    &:hover {
      color: $BLUE;
    }
  }
}

